--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,3 +3,9 @@ steps:
     key: build
     commands: 
       - fly deploy -a hello-fastapi
+  - label: ":semgrep: Semgrep OSS"
+    commands:
+      - semgrep scan --config auto
+    plugins:
+      - docker#v5.11.0:
+          image: semgrep/semgrep
