--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,7 +2,7 @@ steps:
   - label: ":semgrep: Semgrep OSS"
     key: semgrep
     commands:
-      - semgrep scan --config ci --debug
+      - semgrep ci --config auto --debug
     plugins:
       - docker#v5.11.0:
           image: semgrep/semgrep
